# AzureAether

./: pyproject.toml  ruff.toml
src/azureaether/: fitting.py  haven_derived_signal.py  normalized.py  simpledae.py  uncertainty.py
src/azureaether/polarized/: as_device.py  as_plan.py
src/azureaether/scratch/: oa_signal_bug.py
