[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "azureaether"  # REQUIRED, is the only field that cannot be marked as dynamic.
dynamic = ["version"]
description = "Bluesky experimentation"

dependencies = [
  "bluesky",
  "ophyd-async[ca]@git+https://github.com/bluesky/ophyd-async@main",
  "ibex-bluesky-core@git+https://github.com/IsisComputingGroup/ibex_bluesky_core@main",
  "scipp",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.setuptools_scm]
